# chat-simples-com-python-e-flet

./: README.md  client.py  pyproject.toml  server.py
