[tool.poetry]
name = "websocket-app"
version = "0.1.0"
description = ""
authors = ["LeandroDeJesus-S <jstleandro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
websockets = "^13.1"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
flet = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
